@@ -69,6 +69,7 @@ import java.util.concurrent.ConcurrentHashMap;
 import java.util.concurrent.ConcurrentMap;
 import java.util.stream.Collectors;
 
+import static org.thingsboard.server.common.data.DataConstants.EDGE_QUEUE_NAME;
 import static org.thingsboard.server.common.data.DataConstants.MAIN_QUEUE_NAME;
 
 @Service
@@ -77,7 +78,7 @@ public class HashPartitionService implements PartitionService {
 
     @Value("${queue.core.topic}")
     private String coreTopic;
-    @Value("${queue.core.partitions:100}")
+    @Value("${queue.core.partitions:10}")
     private Integer corePartitions;
     @Value("${queue.integration.partitions:3}")
     private Integer integrationPartitions;
@@ -85,6 +86,10 @@ public class HashPartitionService implements PartitionService {
     private String vcTopic;
     @Value("${queue.vc.partitions:10}")
     private Integer vcPartitions;
+    @Value("${queue.edge.topic:tb_edge}")
+    private String edgeTopic;
+    @Value("${queue.edge.partitions:10}")
+    private Integer edgePartitions;
     @Value("${queue.partitions.hash_function_name:murmur3_128}")
     private String hashFunctionName;
 
@@ -142,6 +147,10 @@ public class HashPartitionService implements PartitionService {
         if (!isTransport(serviceInfoProvider.getServiceType())) {
             doInitRuleEnginePartitions();
         }
+
+        QueueKey edgeKey = coreKey.withQueueName(EDGE_QUEUE_NAME);
+        partitionSizesMap.put(edgeKey, edgePartitions);
+        partitionTopicsMap.put(edgeKey, edgeTopic);
     }
 
     @AfterStartUp(order = AfterStartUp.QUEUE_INFO_INITIALIZATION)
@@ -227,8 +236,7 @@ public class HashPartitionService implements PartitionService {
                 .map(queueDeleteMsg -> {
                     TenantId tenantId = TenantId.fromUUID(new UUID(queueDeleteMsg.getTenantIdMSB(), queueDeleteMsg.getTenantIdLSB()));
                     return new QueueKey(ServiceType.TB_RULE_ENGINE, queueDeleteMsg.getQueueName(), tenantId);
-                })
-                .collect(Collectors.toList());
+                }).toList();
         queueKeys.forEach(queueKey -> {
             removeQueue(queueKey);
             evictTenantInfo(queueKey.getTenantId());
@@ -242,8 +250,7 @@ public class HashPartitionService implements PartitionService {
     @Override
     public void removeTenant(TenantId tenantId) {
         List<QueueKey> queueKeys = partitionSizesMap.keySet().stream()
-                .filter(queueKey -> tenantId.equals(queueKey.getTenantId()))
-                .collect(Collectors.toList());
+                .filter(queueKey -> tenantId.equals(queueKey.getTenantId())).toList();
         queueKeys.forEach(this::removeQueue);
         evictTenantInfo(tenantId);
     }
@@ -582,12 +589,10 @@ public class HashPartitionService implements PartitionService {
         if (routingInfo == null) {
             throw new TenantNotFoundException(tenantId);
         }
-        switch (serviceType) {
-            case TB_RULE_ENGINE:
-                return routingInfo.isIsolated();
-            default:
-                return false;
+        if (serviceType == ServiceType.TB_RULE_ENGINE) {
+            return routingInfo.isIsolated();
         }
+        return false;
     }
 
     private boolean hasServiceType(TransportProtos.ServiceInfo server, ServiceType type) {
@@ -632,7 +637,10 @@ public class HashPartitionService implements PartitionService {
                         responsibleServices.computeIfAbsent(profileId, k -> new ArrayList<>()).add(instance);
                     }
                 }
-            } else if (ServiceType.TB_CORE.equals(serviceType) || ServiceType.TB_VC_EXECUTOR.equals(serviceType)) {
+            } else if (ServiceType.TB_CORE.equals(serviceType)) {
+                queueServiceList.computeIfAbsent(new QueueKey(serviceType), key -> new ArrayList<>()).add(instance);
+                queueServiceList.computeIfAbsent(new QueueKey(serviceType).withQueueName(EDGE_QUEUE_NAME), key -> new ArrayList<>()).add(instance);
+            } else if (ServiceType.TB_VC_EXECUTOR.equals(serviceType)) {
                 queueServiceList.computeIfAbsent(new QueueKey(serviceType), key -> new ArrayList<>()).add(instance);
             } else if (ServiceType.TB_INTEGRATION_EXECUTOR.equals(serviceType)) {
                 for (String iType : instance.getIntegrationTypesList()) {
@@ -698,16 +706,12 @@ public class HashPartitionService implements PartitionService {
     }
 
     public static HashFunction forName(String name) {
-        switch (name) {
-            case "murmur3_32":
-                return Hashing.murmur3_32();
-            case "murmur3_128":
-                return Hashing.murmur3_128();
-            case "sha256":
-                return Hashing.sha256();
-            default:
-                throw new IllegalArgumentException("Can't find hash function with name " + name);
-        }
+        return switch (name) {
+            case "murmur3_32" -> Hashing.murmur3_32();
+            case "murmur3_128" -> Hashing.murmur3_128();
+            case "sha256" -> Hashing.sha256();
+            default -> throw new IllegalArgumentException("Can't find hash function with name " + name);
+        };
     }
 
     private List<String> toServiceIds(Collection<ServiceInfo> serviceInfos) {
